--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -22,7 +22,7 @@
 }*/
 
 #clock-button {
-	padding: 4;
+	padding: 4px;
 }
 
 .xfce4-panel button
@@ -32,11 +32,11 @@
 	box-shadow: none;
 	background-image: none;
   /* border:1px solid blue; */
-	border-radius: 5;
-	margin: 5;
+	border-radius: 5px;
+	margin: 5px;
 	background-color: rgba(255,255,255,0.1);
 }
-.xfce4-panel.background .tasklist button { font-size: 12; }
+.xfce4-panel.background .tasklist button { font-size: 12px; }
 .xfce4-panel.background button:active, 
 .xfce4-panel.background button:hover, 
 .xfce4-panel.background button:active:hover, 
@@ -49,7 +49,7 @@
 	/*box-shadow: inset 2 0 #597999;*/
 }
 
-.tasklist { -XfceTasklist-max-button-length: 160; }
+.tasklist { -XfceTasklist-max-button-length: 160px; }
 
 /* #genmon-12 button, #genmon-13 button { padding: 10; } */
 /**/
@@ -83,81 +83,81 @@
 #whiskermenu-8 #whiskermenu-button
 {
 	background-color: #bf616a;
-	margin: 5;
+	margin: 5px;
 }
 
 #whiskermenu-8 #whiskermenu-button:hover { background-color: rgba(255,255,255,0.15); }
 #whiskermenu-8 #whiskermenu-button:checked, #genmon-12 button:checked { background-color: #bf616a; }
 
-window#whiskermenu-window>frame>border { border: 5 solid transparent; }
-window#whiskermenu-window scrolledwindow { margin: 2; }
-#whiskermenu-window button { font-size: 14; }
+window#whiskermenu-window>frame>border { border: 5px solid transparent; }
+window#whiskermenu-window scrolledwindow { margin: 2px; }
+#whiskermenu-window button { font-size: 14px; }
 
-#whiskermenu-window treeview { padding: 7 0 7 10; }
+#whiskermenu-window treeview { padding: 7px 0px 7px 10px; }
 #whiskermenu-window treeview:hover { background-color: rgba(255,255,255,0.1); }
-#whiskermenu-window iconview { font-size: 12; padding: 5 0; }
+#whiskermenu-window iconview { font-size: 12px; padding: 5px 0px; }
 #whiskermenu-window iconview:hover { background-color: rgba(255,255,255,0.1); }
 
 * {
-	-ThunarAbstractIconView-row-spacing: 10;
-	-ThunarAbstractIconView-column-spacing: 10;
+	-ThunarAbstractIconView-row-spacing: 10px;
+	-ThunarAbstractIconView-column-spacing: 10px;
 }
 
 .thunar .sidebar
 {
-	border: 5 solid transparent;
+	border: 5px solid transparent;
 	/*background-image: url("/home/habibi/Pictures/Pictures/habibi.png");
 	background-size: 100%;
 	background-repeat: no-repeat;
 	background-position: 0 100%;*/
 }
-.thunar .standard-view .view { padding: 5 14; }
+.thunar .standard-view .view { padding: 5px 14px; }
 .thunar .sidebar .view
 {
-	padding: 3 4 3 0; background-color: transparent;
-	border-radius: 3;
+	padding: 3px 4px 3px 0px; background-color: transparent;
+	border-radius: 3px;
 }
 .thunar .sidebar .view:hover { background-color: rgba(255,255,255,0.05); }
 .thunar .sidebar .view:selected {
 	background-color: rgba(255,255,255,0.1);
-	border-left: 2 solid #8A5AD0;
+	border-left: 2px solid #8A5AD0;
 }
 
 /* VteTerminal, vte-terminal { padding: 15; } */
 
-.xfsm-logout-dialog { border: 2 solid #2f343f; }
-.xfsm-logout-dialog * { margin: 3; }
+.xfsm-logout-dialog { border: 2px solid #2f343f; }
+.xfsm-logout-dialog * { margin: 3px; }
 
 #XfceNotifyWindow { border: none; }
-#XfceNotifyWindow progressbar { border-radius: 5; }
-#XfceNotifyWindow progressbar progress { min-height: 4; }
-#XfceNotifyWindow progressbar trough { min-height: 4; }
+#XfceNotifyWindow progressbar { border-radius: 5px; }
+#XfceNotifyWindow progressbar progress { min-height: 4px; }
+#XfceNotifyWindow progressbar trough { min-height: 4px; }
 #XfceNotifyWindow image { -gtk-icon-transform: scale(0.8); }
 
 menu, .context-menu { border: none; }
-menu menuitem, .menu menuitem, .context-menu menuitem { padding: 6 16; }
+menu menuitem, .menu menuitem, .context-menu menuitem { padding: 6px 16px; }
 menu menuitem:hover, .menu menuitem:hover, .context-menu menuitem:hover
 {
 	background-color: rgba(255,255,255,0.1);
 	color: white;
 }
-.csd.popup decoration { box-shadow: 0 3 6 rgba(0, 0, 0, 0.45), 0 0 0 0 #22242d; }
+.csd.popup decoration { box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.45), 0 0 0 0 #22242d; }
 
 #xfwm-tabwin
 {
-	border-radius: 5;
+	border-radius: 5px;
 	border: none;
 }
-#xfwm-tabwin button { padding: 2 4; }
+#xfwm-tabwin button { padding: 2px 4px; }
 
 headerbar label { color: inherit; }
 
-treeview { padding: 1 5; }
+treeview { padding: 1px 5px; }
 
 calendar
 {
 	border: 1px solid grey;
-	border-radius: 5;
-	font-size: 14;
+	border-radius: 5px;
+	font-size: 14px;
 }
 
