chore: update thunar gtk.css

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -82,9 +82,9 @@ window#whiskermenu-window scrolledwindow {
 
 /* Thunar (Optional) */
 .thunar .sidebar {
-  border: 5px solid transparent;
+  border: 5px solid blue;
   background-color: transparent;  /* Use a custom background image if desired */
-  padding: 3px 4px 3px 0px;
+  padding: 2px 4px 2px 0px;
   border-radius: 3px;
 }
 
